# go2-parkour-deploy

./: .gitattributes  .gitignore  README.md  Screencast from 2025년 09월 08일 19시 33분 34초.webm
core/: __init__.py  deployment_player.py
core/go2/: go2.xml  scene_flat.xml
docs/: go2_parkour_real_deploy.md
mujoco_deploy/: __init__.py  depth_debug.py  mujoco_terrain_generator.py  mujoco_trace_recorder.py  mujoco_wrapper.py
mujoco_deploy/mujoco_sensors/: mujoco_depth_camera.py  mujoco_joystick_controller.py
real_deploy/: parkour_depth_inference_server.py  realsense_depth_streamer.cpp
real_deploy/policies/parkour_depth/exported_deploy/: depth_latest.pt  policy.pt
real_deploy/policies/parkour_depth/params/: agent.yaml  env.yaml
real_deploy/unitree_rl_lab/deploy/include/: unitree_articulation.h
real_deploy/unitree_rl_lab/deploy/include/FSM/: FSMState.h  State_FixStand.h  State_Passive.h  State_RLBase.h
real_deploy/unitree_rl_lab/deploy/include/isaaclab/algorithms/: algorithms.h
real_deploy/unitree_rl_lab/deploy/include/isaaclab/envs/: manager_based_rl_env.h
real_deploy/unitree_rl_lab/deploy/include/isaaclab/envs/mdp/actions/: joint_actions.h
real_deploy/unitree_rl_lab/deploy/robots/go2/: CMakeLists.txt  main.cpp
real_deploy/unitree_rl_lab/deploy/robots/go2/config/: config.yaml
real_deploy/unitree_rl_lab/deploy/robots/go2/config/policy/parkour_depth/params/: deploy.yaml
real_deploy/unitree_rl_lab/deploy/robots/go2/config/policy/txl_student_scale05/params/: deploy.yaml
real_deploy/unitree_rl_lab/deploy/robots/go2/src/: State_RLBase.cpp
scripts/: __init__.py  build_go2_parkour_ctrl.sh  build_realsense_depth_streamer.sh  collect_go2_parkour_trace_robot.sh  fetch_go2_parkour_trace.sh  go2_deploy.py  go2_deploy_flat.py  prepare_go2_parkour_assets.sh  real_go2_parkour_depth.sh  real_go2_parkour_depth_ctrl.sh  real_go2_parkour_depth_server.sh  realsense_depth_streamer.sh  serve_go2_depth_viewer.sh  start_go2_parkour_camera.sh  start_go2_parkour_ctrl.sh  start_go2_parkour_server.sh  start_go2_parkour_server_record.sh  start_go2_sim2sim.sh  verify_go2_parkour_trace.py
test/: go2_stand.py  test_read_yaml.py
(+2 files in other folders)
